# RustEngine

./: Cargo.toml
src/: main.rs
src/ecs/: component.rs  component_array.rs  entity.rs  mod.rs  query.rs  world.rs
src/engine/: engine_subsystem.rs  logic.rs  mod.rs  time.rs
src/input/: mod.rs
src/math/: mod.rs  transform.rs  vec.rs
src/renderer/: renderer.rs
src/renderer/renderer/: index_buffer.rs  shader.rs  vertex_array.rs  vertex_buffer.rs  vertex_buffer_layout.rs
src/utils/: combo_iterator.rs  default_construct.rs  mod.rs  scoped_perf.rs  to_any.rs
src/world/: component_array.rs  entity.rs  query.rs  world.rs
