[package]
name = "rustengine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
profiler = []

[dependencies]
gl = "*"
glm = "*"
sdl2 = "*"
pprof = { version = "*", features = ["flamegraph"] }

[profile.release]
opt-level = 3
debug = true

[rust]
debuginfo-level = 1
